--- a/Css/gallery.css
+++ b/Css/gallery.css
@@ -1,6 +1,5 @@
 .slider{
     height: 100vh;
-    margin-top: 20px;
     position: relative;
 }
 
@@ -50,7 +49,7 @@
 
 .slider .list .item.active{
     opacity: 1;
-    z-index: 10;
+    z-index: 9;
 }
 
 @keyframes showContent {
@@ -156,5 +155,5 @@
 }
 
 .arrows{
-    top: 10%;
+    display: none;
 }
