--- a/index.css
+++ b/index.css
@@ -48,6 +48,27 @@ html {
   text-transform: uppercase;
 }
 
+.container-theme {
+  z-index: -10;
+  width: 100%;
+  height: 100%;
+  --s: 200px; /* control the size */
+
+  --_g: #fec60d 25%, #fb6c0e 0 50%, #0000 0;
+  --_l1: #fff 0 1px, #0000 0 calc(25% - 1px), #fff 0 25%;
+  --_l2: #fff 0 1px, #0000 0 calc(50% - 1px), #fff 0 50%;
+  background: repeating-linear-gradient(45deg, var(--_l1)),
+    repeating-linear-gradient(-45deg, var(--_l1)),
+    repeating-linear-gradient(0deg, var(--_l2)),
+    repeating-linear-gradient(90deg, var(--_l2)),
+    conic-gradient(from 135deg at 25% 75%, var(--_g)),
+    conic-gradient(from 225deg at 25% 25%, var(--_g)),
+    conic-gradient(from 45deg at 75% 75%, var(--_g)),
+    conic-gradient(from -45deg at 75% 25%, var(--_g)),
+    repeating-conic-gradient(#fb6c0e 0 45deg, #902f72 0 90deg);
+  background-size: var(--s) var(--s);
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -59,7 +80,14 @@ header {
   width: 100%;
   background-color: #00000000;
   z-index: 10;
+  transition: top 0.3s;
+  transform: translateY(-100%);
 }
+
+.header-visible {
+  transform: translateY(0);
+}
+
 
 .logo {
   display: flex;
