--- a/Css/contact.css
+++ b/Css/contact.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lemon&family=Open+Sans:wght@400;600&family=Poppins:wght@400;500;600&display=swap');
+
 .contact{
 align-items: center;
 font-size: 2.0rem;
+font-family: "Comic Neue";
+font-weight: 400;
+font-style: normal;
 }
 
   .max-w-md {
@@ -27,6 +32,7 @@ font-size: 2.0rem;
 
 .text-3xl {
   font-size: 3 rem;
+  
 }
 
 .font-bold {
@@ -70,6 +76,7 @@ font-size: 2.0rem;
 
 .p-4 {
   padding: 4rem;
+  margin: 2rem;
 }
 
 .rounded-lg {
@@ -95,6 +102,12 @@ font-size: 2.0rem;
 .mb-2 {
   margin-bottom: 1.5rem;
 }
+.lowercase {
+  text-transform: lowercase;
+}
+.capitalize {
+  text-transform: capitalize;
+}
 
 @media only screen and (max-width: 769px) {
     .contact{
@@ -111,6 +124,7 @@ font-size: 2.0rem;
 
     .p-4 {
         padding: 2rem;
+        margin: 1rem;
       }
     
   }
