--- a/Css/about us.css
+++ b/Css/about us.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Lemon&family=Open+Sans:wght@400;600&family=Poppins:wght@400;500;600&display=swap');
 
 
 .container-1{
     position: relative;
     line-height: 1.6;
     font-size: 16px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Comic Neue";
     min-width: 320px;
     position: relative; 
     font-weight: 400;
@@ -54,7 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #3d9730;
+    background-color: #a816ad;
     position: relative; }
     .crossfit-item:before {
       content: '';
