--- a/Css/about us.css
+++ b/Css/about us.css
@@ -5,7 +5,7 @@
     position: relative;
     line-height: 1.6;
     font-size: 16px;
-    font-family: "Comic Neue";
+    font-family: "Poppins", sans-serif;
     min-width: 320px;
     position: relative; 
     font-weight: 400;
